nginx.conf: fix http-bind path, add mime types

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,8 +15,15 @@ http {
 	    location /http-bind/ {
 	    	     proxy_buffering off;
 		     tcp_nodelay on;
-		     proxy_pass http://www.superfeedr.com/http-bind;
+		     # TODO: need https
+		     proxy_pass http://superfeedr.com/http-bind/;
 	    }
+     }
+
+     types {
+     	  text/html html;
+	  text/css css;
+	  application/javascript js;
      }
 }
 
